Add disabledTextViewColor attribute & add external library dependency

--- a/qunatitycardlibrary/src/main/res/values/attrs.xml
+++ b/qunatitycardlibrary/src/main/res/values/attrs.xml
@@ -10,6 +10,7 @@
         <attr name="startingQuantity" format="integer" />
         <attr name="minQuantity" format="integer" />
         <attr name="maxQuantity" format="integer" />
+        <attr name="disabledButtonsTextColor" format="color" />
         <attr name="buttonsTextColor" format="color" />
         <attr name="increaseTextColor" format="color" />
         <attr name="decreaseTextColor" format="color" />
